--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
-    "mysql": "^2.15.0"
-  }
+    "express-validator": "^5.1.2",
+    "mysql": "^2.15.0",
+    "npm": "^6.0.0"
+  } 
 }
